--- a/style.css
+++ b/style.css
@@ -1,16 +1,253 @@
 * {
 	padding: 0;
 	margin: 0;
+	scroll-behavior: smooth;
 }
+
 body {
 	position: relative;
-	background-color: white;
+	background-color: black;
+	min-height: 100vh;
+	/* background: linear-gradient(#2b1055, #7597de); */
+	font-family: 'Times New Roman', Times, serif;
+	overflow-x: hidden;
 }
+
 .render-container {
-	position: absolute;
+	position: fixed;
+	right: 0;
+	top: 0;
 	height: 100vh;
 	width: 100vw;
 	z-index: -99;
 	padding: 0;
 	margin: 0;
+	overflow-x: hidden;
+}
+
+
+section {
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
+}
+
+main {
+	z-index: 99;
+}
+
+section img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	pointer-events: none;
+}
+
+section img#moon {
+	z-index: 10;
+	/* mix-blend-mode: screen; */
+}
+
+/* #text {
+    position: absolute;
+    right: -100px;
+    color: #fff;
+    white-space: nowrap;
+    font-size: 6vw;
+    z-index: 9;
+} */
+
+section img#mountains_front {
+	z-index: 10;
+}
+
+section img#stars {
+	z-index: 1;
+	transform-origin: top;
+}
+
+#btn {
+	display: inline-block;
+	text-decoration: none;
+	padding: 9px 36px;
+	border-radius: 39px;
+	background: #3d1b0c52;
+	color: #2b1055;
+	font-size: 1.5em;
+	z-index: 12;
+	box-shadow: 0px 0px 2pt 0px #d9a200;
+	transform: translateY(100px);
+	color: #bcbcbc;
+	backdrop-filter: blur(2px);
+	font-family: system-ui;
+}
+
+.story {
+	position: relative;
+	padding: 100px 0px;
+
+	background: #1c0522;
+	display: flex;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	align-items: center;
+	justify-content: center;
+}
+
+/* .story h2 {
+    font-size: 3.3em;
+    margin-bottom: 10px;
+    color: #fff;
+} */
+section::before {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 100px;
+	background: linear-gradient(to top, #1c0522, transparent);
+	z-index: 1001;
+}
+
+
+.book {
+
+	position: relative;
+	width: 350px;
+	height: 500px;
+	transition: transform 0.5s;
+
+}
+
+.paper {
+
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	perspective: 1500px;
+}
+
+.front,
+.back {
+	background-color: white;
+	background-image: url(./public/images/this.jpg);
+	background-size: cover;
+	background-position: center;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transform-origin: left;
+	transition: transform 0.5s;
+}
+
+.front {
+	z-index: 1;
+	backface-visibility: hidden;
+	border: 3px solid black;
+}
+
+.back {
+	z-index: 0;
+}
+
+.front-content,
+.back-content {
+	width: 100%;
+	height: 100%;
+	font-family: cursive;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.back-content {
+	transform: rotateY(180deg);
+}
+
+/* paper flip */
+.flipped .front,
+.flipped .back {
+	transform: rotateY(-180deg);
+}
+
+/* controller buttons  */
+button {
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+	margin: 10px;
+	transition: transform 0.5s;
+}
+
+button :focus {
+	outline: none;
+}
+
+button:hover i {
+	color: #636363;
+}
+
+i {
+	font-size: 50px;
+	color: gray;
+}
+
+/* paper stack */
+#p1 {
+	z-index: 3;
+}
+
+#p2 {
+	z-index: 2;
+}
+
+#p3 {
+	z-index: 1;
+}
+
+.image {
+	background-image: url("wtt.jpg") no-repeat center center fixed;
+	background-size: cover;
+	background-position: center;
+	width: 350px;
+	height: 510px;
+	margin: 0;
+	padding: 0;
+
+
+}
+
+.cab {
+	background-image: url("thh.jpg");
+	background-size: cover;
+	background-position: center;
+	width: 350px;
+	height: 500px;
+}
+
+.story1 {
+	font-size: medium;
+	justify-content: center;
+	font-family: 'Times New Roman', Times, serif;
+	color: saddlebrown;
+	-webkit-text-stroke: 0.1vh black;
+	padding: 12px;
+	/* margin: 12px; */
+	text-align: center;
 }
