--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 	background-color: black;
 	min-height: 100vh;
 	/* background: linear-gradient(#2b1055, #7597de); */
-	font-family: 'Times New Roman', Times, serif;
+	font-family: "Times New Roman", Times, serif;
 	overflow-x: hidden;
 }
 
@@ -19,12 +19,13 @@ body {
 	top: 0;
 	height: 100vh;
 	width: 100vw;
+	/* TODO: Put the zindex back to -99 */
 	z-index: -99;
 	padding: 0;
 	margin: 0;
 	overflow-x: hidden;
+	overflow-y: hidden;
 }
-
 
 section {
 	position: relative;
@@ -34,10 +35,6 @@ section {
 	align-items: center;
 	justify-content: center;
 	overflow: hidden;
-}
-
-main {
-	z-index: 99;
 }
 
 section img {
@@ -108,7 +105,7 @@ section img#stars {
     color: #fff;
 } */
 section::before {
-	content: '';
+	content: "";
 	position: absolute;
 	bottom: 0;
 	width: 100%;
@@ -117,18 +114,14 @@ section::before {
 	z-index: 1001;
 }
 
-
 .book {
-
 	position: relative;
 	width: 350px;
 	height: 500px;
 	transition: transform 0.5s;
-
 }
 
 .paper {
-
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -191,7 +184,7 @@ button {
 	border: none;
 	background-color: transparent;
 	cursor: pointer;
-	margin: 10px;
+	margin: 5em;
 	transition: transform 0.5s;
 }
 
@@ -229,8 +222,6 @@ i {
 	height: 510px;
 	margin: 0;
 	padding: 0;
-
-
 }
 
 .cab {
@@ -244,10 +235,23 @@ i {
 .story1 {
 	font-size: medium;
 	justify-content: center;
-	font-family: 'Times New Roman', Times, serif;
+	font-family: "Times New Roman", Times, serif;
 	color: saddlebrown;
 	-webkit-text-stroke: 0.1vh black;
 	padding: 12px;
 	/* margin: 12px; */
 	text-align: center;
+}
+/*TODO: change the opacity to 0 (for dev)  */
+.mainClass {
+	transition: all 5;
+	opacity: 1;
+	z-index: 99;
+}
+.visible {
+	opacity: 1;
+}
+
+.hidden {
+	opacity: 0;
 }
