--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 	height: 100vh;
 	width: 100vw;
 	/* TODO: Put the zindex back to -99 */
-	z-index: 199;
+	z-index: -99;
 	padding: 0;
 	margin: 0;
 	overflow-x: hidden;
@@ -245,13 +245,17 @@ i {
 /*TODO: change the opacity to 0 (for dev)  */
 .mainClass {
 	transition: all 5;
-	opacity: 0;
+	opacity: 1;
 	z-index: 99;
 }
-.visible {
-	opacity: 1;
-}
 
-.hidden {
+.help-overlay {
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 150;
 	opacity: 0;
+	color: white;
+	font-size: 1rem;
+	background-color: #2b1055;
 }
