--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap");
+
 * {
 	padding: 0;
 	margin: 0;
@@ -11,6 +13,20 @@ body {
 	/* background: linear-gradient(#2b1055, #7597de); */
 	font-family: "Times New Roman", Times, serif;
 	overflow-x: hidden;
+}
+
+header {
+	padding-left: 3em;
+	padding-top: 3rem;
+	margin: 0;
+	color: white;
+	font-family: "Pixelify Sans", sans-serif;
+}
+#title {
+	font-size: 5rem;
+}
+#tagline {
+	font-size: 3rem;
 }
 
 .render-container {
@@ -47,22 +63,9 @@ section img {
 	pointer-events: none;
 }
 
-section img#moon {
-	z-index: 10;
-	/* mix-blend-mode: screen; */
-}
-
-/* #text {
-    position: absolute;
-    right: -100px;
-    color: #fff;
-    white-space: nowrap;
-    font-size: 6vw;
-    z-index: 9;
-} */
-
 section img#mountains_front {
 	z-index: 10;
+	display: none;
 }
 
 section img#stars {
@@ -182,6 +185,8 @@ section::before {
 /* controller buttons  */
 button {
 	border: none;
+	z-index: 10;
+
 	background-color: transparent;
 	cursor: pointer;
 	margin: 5em;
@@ -244,7 +249,6 @@ i {
 }
 /*TODO: change the opacity to 0 (for dev)  */
 .mainClass {
-	transition: all 5;
 	opacity: 1;
 	z-index: 99;
 }
@@ -258,4 +262,20 @@ i {
 	color: white;
 	font-size: 1rem;
 	background-color: #2b1055;
+}
+
+.secondPage {
+	height: 100vh;
+	width: 100%;
+	overflow-x: hidden;
+	background-color: transparent;
+	position: fixed;
+	z-index: 150;
+	display: flex;
+	flex-direction: row;
+}
+.question-answers {
+	height: 100px;
+	width: 100px;
+	background-color: white;
 }
