--- a/style.css
+++ b/style.css
@@ -254,6 +254,9 @@ i {
 }
 
 .help-overlay {
+	list-style: none;
+	padding: 1em;
+	max-lines: 3;
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -265,17 +268,25 @@ i {
 }
 
 .secondPage {
-	height: 100vh;
-	width: 100%;
+	height: 100%;
+	width: 50%;
 	overflow-x: hidden;
 	background-color: transparent;
 	position: fixed;
-	z-index: 150;
+	right: 0;
+	top: 0;
+	z-index: -1000;
+	opacity: 0;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 }
 .question-answers {
-	height: 100px;
-	width: 100px;
-	background-color: white;
+	margin-right: 1em;
+	margin-top: 100vh;
+	text-align: left;
+	color: white;
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
+	min-height: 100vh;
+	background-color: transparent;
+	opacity: 1;
 }
