Post producstion bugs fixed

--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ i {
 .question-answers {
 	margin-right: 1em;
 	margin-top: 85vh;
+	margin-bottom: 2em;
 	text-align: left;
 	color: white;
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
